--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,8 @@
 [profile.default]
-src = "src"
+src = "contracts"
 out = "out"
 libs = ["lib"]
-
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+remappings = [
+    "@openzeppelin=lib/openzeppelin-contracts",
+    "balancer-v2=lib/balancer-v2-monorepo/pkg/interfaces/contracts"
+]
